@@ -527,14 +527,6 @@ unregisterActiveThread(NSThread *thread)
 
       [NSThread _createThreadForCurrentPthread];
       defaultThread = [NSThread currentThread];
-
-      /*
-       * The objc runtime calls this callback AFTER creating a new thread -
-       * which is not correct for us, but does at least mean that we can tell
-       * if we have become multi-threaded due to a call to the runtime directly
-       * rather than via the NSThread class.
-       */
-      objc_set_thread_callback(gnustep_base_thread_callback);
     }
 }
 
