@@ -1,3 +1,7 @@
+2011-03-06  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSThread.m: remove obsolete call to objc_set_thread_callback().
+
 2011-03-05  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/GSInternal.h:
